src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@import url('fonts.css');

/* You can override the default Infima variables here and define our custom global variables. */
:root {
  --tigera-nav-link-color: #141414;
  --tigera-banner-color: #ffffff;
  --tigera-sidebar-active-item-color: #dcdde0;
  --tigera-dropdown-item-background-color-hover: #097db6;

  --ifm-color-primary: #f69320;
  --ifm-color-primary-dark: #f37828;
  --ifm-color-primary-darker: #f37828;
  --ifm-color-primary-darkest: #f37828;
  --ifm-color-primary-light: #fbd4a6;
  --ifm-color-primary-lighter: #fce181;
  --ifm-color-primary-lightest: #fce181;
  --ifm-code-font-size: 95%;
  --ifm-link-color: #273981;
  --ifm-link-hover-color: #273981;
  --ifm-menu-color-active: #273981;
  --ifm-heading-font-family: Poppins;
  --ifm-font-family-base: Poppins;
  --ifm-navbar-link-color: #000000;
  --ifm-font-color-base: #141414;
  --ifm-menu-color-active: #141414;
  --ifm-menu-link-sublist-icon: url('/img/icons/sidebar-arrow.svg');
  --ifm-color-content-secondary: #5f5f5f;
  --ifm-color-emphasis-700: #5f5f5f;
  --ifm-pagination-nav-color-hover: var(--ifm-link-color);
  --ifm-dropdown-hover-background-color: var(--tigera-dropdown-item-background-color-hover);

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
  --color-primary-alternative: #097db6;
  --doc-sidebar-width: 348px !important;
  --docsearch-searchbox-background: #ffffff !important;
  --docsearch-muted-color: #141414 !important;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --tigera-nav-link-color: #ffffff;
  --tigera-sidebar-active-item-color: rgba(255, 255, 255, 0.2);
  --tigera-dropdown-item-background-color-hover: #71aaeb;

  --ifm-font-color-base: #ffffff;
  --ifm-menu-color-active: #ffffff;
  --ifm-navbar-link-color: #ffffff;
  --ifm-toc-link-color: var(--ifm-color-emphasis-700) !important;
  --ifm-link-color: #71aaeb;
  --ifm-link-hover-color: #71aaeb;
  --ifm-dropdown-background-color: #808080;

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  --docsearch-searchbox-background: #090a11 !important;
  --docsearch-muted-color: #ffffff !important;
}

/* Overrides for site-wide elements */

ol ol {
  list-style-type: lower-alpha;
}

img {
  width: auto;
}

.tabs-container {
  border-left: 3px solid var(--ifm-color-primary-light);
  padding-left: 0.75rem;
}

/*
  If doc title is declared via front-matter then Docusaurus will wrap it with "header" tag.
  For such markup Docusaurus adds special CSS which removes extra top margin.
  With the style below, we want to achieve the same result to have consistent styles.
*/
.theme-doc-markdown.markdown > h1:first-of-type + h2 {
  margin-top: 0;
}

/* Overrides for the logo in the header */

.logo-wrapper {
  display: flex;
  align-items: center;
  width: 184px;
  justify-content: flex-end;
}

.logo-wrapper::after {
  transform: none !important;
  left: -8px;
  font-size: 16px;
}

.navbar__link.logo-wrapper::after {
  top: 1px !important;
}

.logo-wrapper .navbar__brand {
  display: flex;
  align-items: center;
  margin-right: 0;
}

.navbar__item:has(.logo-wrapper) {
  display: block;
}

.navbar-sidebar__brand .navbar__item {
  display: block;
  padding-left: 0;
}

/* Overrides for the header */

.dropdown-separator {
  margin: 10px 0;
}

.header-icon-link:hover {
  opacity: 0.6;
}

.header-icon-link::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
}

.navbar__link::after {
  font-size: 0.75rem;
  top: 3px !important;
}

.dropdown > .navbar__link:after {
  background: url('/img/icons/navbar-arrow.svg') 50% / 1.5rem 1.5rem;
  background-repeat: no-repeat;
  background-size: 12px;
  border-width: 0;
  transform: none;
  width: 16px;
  height: 16px;
}

[data-theme='dark'] .dropdown > .navbar__link:after {
  background: url('/img/icons/navbar-arrow-dark-mode.svg') 50% / 1.5rem 1.5rem;
  background-repeat: no-repeat;
  background-size: 12px;
  border-width: 0;
  transform: none;
  width: 16px;
  height: 16px;
}

.dropdown > .navbar__link:hover:after {
  background: url('/img/icons/navbar-arrow-hover.svg') 50% / 1.5rem 1.5rem;
  background-repeat: no-repeat;
  background-size: 12px;
  border-width: 0;
  transform: none;
  width: 16px;
  height: 16px;
}

.dropdown__menu {
  padding: 0.5rem 0;
}

.dropdown__link {
  border-radius: 0;
  padding: 0.25rem 0.75rem;
  transition: none;
}

.dropdown__link--active,
.dropdown__link--active:hover,
.dropdown__link:hover {
  color: #ffffff;
}

.navbar__items {
  font-size: 0.875rem;
}

/* Overrides for the banner on the landing page */

.hero {
  background: linear-gradient(105.96deg, #0964ad 56.79%, #06547a 100%);
  color: var(--tigera-banner-color);
}

.hero .container {
  text-align: left;
}

.hero__title {
  margin-bottom: 1.5rem;
}

.hero__subtitle {
  font-size: 1rem;
  font-weight: 400;
  max-width: 850px;
  line-height: 2rem;
}

.hero__title,
.hero__subtitle {
  padding: 0 1rem;
}

/* Overrides for the footer */

.footer__title {
  font-size: 1.25rem;
  margin-bottom: 1.5rem;
}

.footer__item {
  font-weight: 500;
  margin-bottom: 1rem;
}

.footer__link-item {
  line-height: 24px;
  display: block;
}

.footer__copyright {
  font-size: 0.75rem;
  font-weight: 500;
}

.footer-social-icon {
  display: inline-block;
  padding: 0px 4px;
  margin-top: 28px;
}

.footer-social-icon::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
}

.footer-copyright__title,
.footer-copyright__description {
  line-height: 20px;
}

.footer-copyright__title {
  margin-bottom: 8px;
}

.footer--dark {
  --ifm-footer-background-color: #141414;
}

/* Overrides for the side-nav menu */

.menu {
  font-weight: 500;
  font-size: 0.875rem;
  padding-left: 1rem !important;
  padding-right: 1rem !important;
}

.menu__list:not(:first-child) {
  margin-top: 4px;
}

.menu__list-item:not(:first-child) {
  margin-top: 8px;
}

.menu__list-item .menu__list-item:not(:first-child) {
  margin-top: 2px;
  min-height: 32px;
}

.menu > .menu__list .menu__list {
  margin-left: 15px;
  position: relative;
}

.menu > .menu__list .menu__list::before {
  content: '';
  background: #dcdde0;
  position: absolute;
  top: 15px;
  bottom: 20px;
  left: 0;
  width: 1px;
}

.menu__list-item--collapsed .menu__caret:before {
  transform: rotateZ(180deg);
}

.menu__caret:before {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
  transform: none;
  background-size: 12px;
  background-repeat: no-repeat;
}

.menu__list-item-collapsible--active,
.menu__list-item-collapsible--active:hover {
  background: var(--tigera-sidebar-active-item-color);
}

/* Overrides for breadcrumbs */

.breadcrumbs__link {
  color: var(--ifm-menu-color);
  font-weight: 500;
}

.breadcrumbs__link:hover {
  background: none !important;
  color: var(--ifm-color-primary);
}

.breadcrumbs__item--active .breadcrumbs__link {
  color: var(--ifm-font-color-base);
  background: none;
}

.breadcrumbs__item:not(:last-child)::after {
  margin: 0;
  opacity: 1;
}

/* Overrides for TOC */

.table-of-contents__link {
  font-weight: 500;
}

.table-of-contents__link--active {
  color: var(--tigera-nav-link-color);
  font-weight: 600;
}

.table-of-contents li {
  margin: 0.5rem 0.75rem;
}

/* Overrides and styles for the specific icons */

.github-icon::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

[data-theme='dark'] .github-icon::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

.linkedin-icon::before {
  background: url('/img/brands/linkedin-in.svg') no-repeat;
}

.twitter-icon::before {
  background: url('/img/brands/twitter.svg') no-repeat;
}

.youtube-icon::before {
  background: url('/img/brands/youtube.svg') no-repeat;
}

.slack-icon::before {
  background: url('/img/brands/slack.svg') no-repeat;
}

.linkedin-icon:hover,
.twitter-icon:hover,
.youtube-icon:hover,
.slack-icon:hover {
  opacity: 0.6;
}

.geek-details-info {
  width: 40px;
  height: 40px;
  margin: 20px 0 0 10px;
  padding: 0;
  border-radius: 50%;
  background-color: #5788e2;
}

.geek-details-info:hover {
  background-color: #134ebc;
}

th {
  text-align: left;
}

.DocSearch.DocSearch-Button {
  font-family: 'Poppins';
  border-radius: 6px;
  border: 1px solid #dcdde0;
}
.DocSearch.DocSearch-Button:hover {
  box-shadow: inset 0 0 0 1px var(--docsearch-muted-color);
}
.DocSearch-Button-Placeholder {
  font-size: 14px !important;
}
.DocSearch-Logo {
  display: none;
}
.DocSearch-Modal-product-undefined .DocSearch-Footer {
  display: none;
}
[class*='searchLogoColumn'] {
  display: none;
}
[class*='searchVersionColumn'] {
  display: none;
}
[class*='searchResultItem'] {
  position: relative;
}
[class*='searchResultItemPath'] {
  max-width: 77%;
}
input[class*='searchQueryInput']::placeholder {
  color: var(--ifm-color-content-secondary);
}
input[class*='searchQueryInput']:focus {
  border-color: var(--docsearch-muted-color);
}
.search-page-productId {
  position: absolute;
  right: 50px;
  bottom: 10px;
  color: var(--ifm-color-content-secondary);
  font-size: 13px;
}
[class*='searchResultItem'] a {
  color: var(--docsearch-hit-color);
}
.DocSearch-Hit-content-wrapper {
  overflow-y: hidden;
}

